2011-11-10  Michael Wiegand <michael.wiegand@greenbone.net>

	* CMakeLists.txt: Adjust path of source file in install to point to
	the correct file for out-of-source builds.

2011-11-10  Michael Wiegand <michael.wiegand@greenbone.net>

	* doc/Doxyfile.in, doc/Doxyfile_full.in: Use CPACK_PACKAGE_VERSION
	instead of a static value for the version.

2011-11-10  Michael Wiegand <michael.wiegand@greenbone.net>

	* nasl/CMakeLists.txt: Adjust bison call in custom command to enable
	out-of-source builds.

2011-11-10  Michael Wiegand <michael.wiegand@greenbone.net>

	* misc/network.c (open_SSL_connection): Call
	gnutls_transport_set_lowat only for gnutls < 2.12.0 since it is
	deprecated in newer versions. Patch suggested by Stephan Kleine.

2011-11-07  Michael Wiegand <michael.wiegand@greenbone.net>

	* nasl/smb_crypt.h: Ensure that the license text contains the correct
	address if the Free Software Foundation.

2011-11-07  Michael Wiegand <michael.wiegand@greenbone.net>

	* hg/hg_add_hosts.c, hg/hg_add_hosts.h, hg/hg_debug.c,
	hg/hg_dns_axfr.c, hg/hg_dns_axfr.h, hg/hg_filter.c, hg/hg_filter.h,
	hg/hg_subnet.c, hg/hg_subnet.h, hg/hg_utils.c, hg/hg_utils.h,
	hg/hosts_gatherer.c, hg/hosts_gatherer.h, hg/test.c, misc/bpf_share.c,
	misc/comm.h, misc/kb.c, misc/nvt_categories.h, misc/pcap.c,
	misc/popen.c, misc/rand.c, misc/rand.h, misc/resolve.c,
	misc/resolve.h, misc/scanners_utils.c, misc/scanners_utils.h,
	misc/services1.c, misc/services.h, misc/www_funcs.c, nasl/arc4.c,
	nasl/byteorder.h, nasl/capture_packet.c, nasl/capture_packet.h,
	nasl/charcnv.c, nasl/charset.h, nasl/exec.c, nasl/exec.h,
	nasl/genrand.c, nasl/hmacmd5.c, nasl/hmacmd5.h, nasl/iconv.c,
	nasl/iconv.h, nasl/lint.c, nasl/md4.c, nasl/md4.h,
	nasl/nasl_builtin_openvas_tcp_scanner.c, nasl/nasl.c,
	nasl/nasl_cmd_exec.c, nasl/nasl_cmd_exec.h, nasl/nasl_crypto2.c,
	nasl/nasl_crypto2.h, nasl/nasl_crypto.c, nasl/nasl_crypto.h,
	nasl/nasl_debug.c, nasl/nasl_debug.h, nasl/nasl_func.c,